--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,126 @@
     <title>StarCoffee</title>
     <link rel="stylesheet" href="CSS/style.css">
 </head>
+
 <body>
-    
+
+    <header>
+        <div class="logo-menu">
+            <img src="img/logo.png" alt="">
+            <nav>
+                <ul class="menu">
+                    <li><a href="#">MENU</a></li>
+                    <li><a href="#">REWARDS</a></li>
+                    <li><a href="#">NOSSO CAFÉ</a></li>
+                    <li><a href="#">IMPACTO SOCIAL</a></li>
+                </ul>
+            </nav>
+        </div>
+
+        <div class="botoes-menu">
+            <a href="#" class="botao-loja"> <img src="/StarCoffee/img/localização.svg" alt="">Encontre uma loja</a>
+            <a href="#" class="botao-branco">Entrar</a>
+            <a href="#" class="botao-preto">Participe agora</a>
+        </div>
+    </header>
+
+    <main>
+        <img src="/StarCoffee/img/capasite.jpg" alt="">
+
+
+        <div class="cardi1">
+
+            <p> Conforme abrimos nossas lojas, permanecemos no
+                compromisso com a saúde e bem-estar de nossos <br>
+                partners e consumidores.</p>
+
+            <a href="#" class="botao-branco">Saiba mais</a>
+
+        </div>
+
+        <div class="card-com-img">
+
+            <img src="/StarCoffee/img/site1.jpg" alt="">
+            <div>
+                <h2>Voltando ao que amamos juntos</h2>
+
+                <p> Queridos clientes, partners e amigos, estamos acompanhando a situação
+                    atual do Brasil em relação ao COVID-19, focados na segurança e bem
+                    estar dos nossos partners (como chamamos os nossos colaboradores) e
+                    clientes. Seguimos os critérios de quarentena de cada munícipo que
+                    temos lojas. As lojas abertas ou com entrega via delivery, através do
+                    nosso parceiro Rappi, estão seguindo as orientações das autoridades de
+                    saúde.</p>
+
+                <a href="#" class="botao-branco">Baixe nosso App e verifique as lojas em
+                    funcionamento</a>
+            </div>
+        </div>
+
+
+        <div class="card-com-img">
+            <div>
+                <h2>Saboreie uma pausa</h2>
+
+                <p>Saboreie uma pausa com uma de nossas bebidas</p>
+
+                <a href="#" class="botao-branco">Saiba mais</a>
+            </div>
+            <img src="/StarCoffee/img/site2.jpg" alt="">
+
+        </div>
+
+    </main>
+
+
+    <footer class="rodape">
+
+        <ul class="sobre-nos">
+            <li>
+                <h3>Sobre nós</h3>
+            </li>
+            <br>
+            <li>Nossa empresa</li>
+            <li>Nosso café</li>
+            <li>Atendimento ao cliente</li>
+            <li>Compliance e Privacidade</li>
+            <li>Código de Ética e Conduta <br>
+                SouthRock</li>
+        </ul>
+
+        <ul class="Carreira">
+            <li>
+                <h3>Carreira</h3>
+            </li>
+            <br>
+            <li>Central de carreiras</li>
+        </ul>
+
+        <ul class="Impacto-Social">
+            <li>
+                <h3>Impacto Social</h3>
+            </li>
+            <br>
+            <li>Comunidade</li>
+            <li>Meio Ambiente</li>
+            <li>Fornecimento ético</li>
+            <li>Histórias Starbucks</li>
+        </ul>
+
+
+        <ul class="Starbucks-Rewards">
+            <li>
+                <h3>Starbucks Rewards</h3>
+            </li>
+            <br>
+            <li>Baixe o aplicativo</li>
+            <li>Termos & Condições do Starbucks Card</li>
+            <li>Termos & Condições do Starbucks Rewards</li>
+            <li>Termos & Condições do Gift Card</li>
+            <li>Termos & Condições de Promoções Starbucks</li>
+            <li>Termos & Condições Peça e Pague pelo Celular e Retire na Loja</li>
+        </ul>
+    </footer>
 </body>
+
 </html>
