--- a/index.html
+++ b/index.html
@@ -128,6 +128,19 @@
             <li>Termos & Condições Peça e Pague pelo Celular e Retire na Loja</li>
         </ul>
     </footer>
+
+    <hr>
+
+    <div class="icones">
+        <img src="img/icon-facebook.svg" alt="">
+        <img src="img/icon-instagram.svg" alt="">
+        <img src="img/icon-linkedin.svg" alt="">
+        <img src="img/icon-spotify.svg" alt="">
+        <img src="img/icon-twitter.svg" alt="">
+        <img src="img/icon-youtube.svg" alt="">
+
+
+    </div>
 </body>
 
 </html>
